added .env data

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 PORT = 3010
-MONGO_URL=mongodb://osaid920:qrmemq7islbICx9M@cluster0-shard-00-00.syawc.mongodb.net:27017,cluster0-shard-00-01.syawc.mongodb.net:27017,cluster0-shard-00-02.syawc.mongodb.net:27017/planetZoo?ssl=true&replicaSet=atlas-xdy9mo-shard-0&authSource=admin&retryWrites=true&w=majority
+MONGO_URL=mongodb://osaid920:10872910Osaid!@cluster0-shard-00-00.syawc.mongodb.net:27017,cluster0-shard-00-01.syawc.mongodb.net:27017,cluster0-shard-00-02.syawc.mongodb.net:27017/planetZoo?ssl=true&replicaSet=atlas-xdy9mo-shard-0&authSource=admin&retryWrites=true&w=majority
